update docs for add-channel-members
